Bytebuddy flag for java 21 Some add-opens for vertx tests